--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     
     <!-- ▒ c ▒ o ▒ n ▒ t ▒ a ▒ c ▒ t ▒ s ▒ -->
 
-    <profile name="Gabriele Leonardi" role="Web developer"></profile>
+    <profile name="Gabriele Leonardi" birth="1994" role="Web developer"></profile>
     <a ctrl\cmd+click="→" href="mailto:leonardi.gabriele.lg@gmail.com"></a>
     <a ctrl\cmd+click="→" href="tel:+39 3396343299"></a>
     <a ctrl\cmd+click="→" href="https://linkedin.com/in/gabrieleleonardi"></a>
@@ -328,7 +328,7 @@
     
     &lt;!-- ▒ c ▒ o ▒ n ▒ t ▒ a ▒ c ▒ t ▒ s ▒ --&gt;
 
-    &lt;profile name="Gabriele Leonardi" role="Web developer"&gt;&lt;/profile&gt;
+    &lt;profile name="Gabriele Leonardi" birth="1994" role="Web developer"&gt;&lt;/profile&gt;
     &lt;a ctrl\cmd+click="→" href="mailto:leonardi.gabriele.lg@gmail.com"&gt;&lt;/a&gt;
     &lt;a ctrl\cmd+click="→" href="tel:+39 3396343299"&gt;&lt;/a&gt;
     &lt;a ctrl\cmd+click="→" href="https://linkedin.com/in/gabrieleleonardi"&gt;&lt;/a&gt;
