luca venturelli link

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <luca-venturelli ✣="Content has to breathe">
       <state ●="live"></state>
       <project name="Luca Venturelli" year="2022"></project>
-      <a ctrl\cmd+click="→" href="http://lucaventurelli.com"></a>
+      <a ctrl\cmd+click="→" href="http://www.lucaventurelli.com"></a>
       <stack backend="static" frontend="Nuxt 2"></stack>
     </luca-venturelli>
     
@@ -230,7 +230,7 @@
 <span class="line"><span style="color: #96F">    &lt;</span><span style="color: #F95">luca-venturelli</span><span style="color: #96F"> </span><span style="color: #F5B">✣</span><span style="color: #96F">=</span><span style="color: #FFF">&quot;Content has to breathe&quot;</span><span style="color: #96F">&gt;</span></span>
 <span class="line"><span style="color: #96F">      &lt;</span><span style="color: #F95">state</span><span style="color: #96F"> </span><span style="color: #F5B">●</span><span style="color: #96F">=</span><span style="color: #FFF">&quot;live&quot;</span><span style="color: #96F">&gt;&lt;/</span><span style="color: #F95">state</span><span style="color: #96F">&gt;</span></span>
 <span class="line"><span style="color: #96F">      &lt;</span><span style="color: #F95">project</span><span style="color: #96F"> </span><span style="color: #F5B">name</span><span style="color: #96F">=</span><span style="color: #FFF">&quot;Luca Venturelli&quot;</span><span style="color: #96F"> </span><span style="color: #F5B">year</span><span style="color: #96F">=</span><span style="color: #FFF">&quot;2022&quot;</span><span style="color: #96F">&gt;&lt;/</span><span style="color: #F95">project</span><span style="color: #96F">&gt;</span></span>
-<span class="line"><span style="color: #96F">      &lt;</span><span style="color: #F95">a</span><span style="color: #96F"> </span><span style="color: #F5B">select+visit</span><span style="color: #96F">=</span><span style="color: #FFF">&quot;→&quot;</span><span style="color: #96F"> </span><span style="color: #F5B">href</span><span style="color: #96F">=</span><span style="color: #FFF">&quot;http://lucaventurelli.com&quot;</span><span style="color: #96F">&gt;&lt;/</span><span style="color: #F95">a</span><span style="color: #96F">&gt;</span></span>
+<span class="line"><span style="color: #96F">      &lt;</span><span style="color: #F95">a</span><span style="color: #96F"> </span><span style="color: #F5B">select+visit</span><span style="color: #96F">=</span><span style="color: #FFF">&quot;→&quot;</span><span style="color: #96F"> </span><span style="color: #F5B">href</span><span style="color: #96F">=</span><span style="color: #FFF">&quot;http://www.lucaventurelli.com&quot;</span><span style="color: #96F">&gt;&lt;/</span><span style="color: #F95">a</span><span style="color: #96F">&gt;</span></span>
 <span class="line"><span style="color: #96F">      &lt;</span><span style="color: #F95">stack</span><span style="color: #96F"> </span><span style="color: #F5B">backend</span><span style="color: #96F">=</span><span style="color: #FFF">&quot;static&quot;</span><span style="color: #96F"> </span><span style="color: #F5B">frontend</span><span style="color: #96F">=</span><span style="color: #FFF">&quot;Nuxt 2&quot;</span><span style="color: #96F">&gt;&lt;/</span><span style="color: #F95">stack</span><span style="color: #96F">&gt;</span></span>
 <span class="line"><span style="color: #96F">    &lt;/</span><span style="color: #F95">luca-venturelli</span><span style="color: #96F">&gt;</span></span>
 <span class="line"><span style="color: #96F">    </span></span>
