--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
 
     <!-- ▒ p ▒ r ▒ o ▒ j ▒ e ▒ c ▒ t ▒ s ▒ -->
 
+    <cc-tapis ✣="Rugs & ASCII">
+      <state ●="live"></state>
+      <project name="cc-tapis" year="2024"></project>
+      <a ctrl\cmd+click="→" href="https://cc-tapis.com"></a>
+      <stack backend="Craft CMS + Shopify" api="GraphQL" frontend="Nuxt 3"></stack>
+    </cc-tapis>
+    
+    <no-ghost ✣="Custom restaurant management system">
+      <state ●="live"></state>
+      <project name="No Ghost" year="2025"></project>
+      <a ctrl\cmd+click="→" href="https://eatnoghost.com"></a>
+      <stack backend="Odoo + Payload CMS" api="JSON-RPC + Local API" frontend="Next.js 15"></stack>
+    </no-ghost>
+    
     <loewe-foundation-craft-prize-2024 ✣="Infinite looping scroll of exquisite artworks">
       <state ●="live"></state>
       <project name="Loewe Foundation Craft Prize 2024" year="2024"></project>
@@ -178,6 +192,20 @@
 <span class="line"></span>
 <span class="line"><span style="color:#8F5">    &#x3C;!-- ▒ p ▒ r ▒ o ▒ j ▒ e ▒ c ▒ t ▒ s ▒ --></span></span>
 <span class="line"></span>
+<span class="line"><span style="color:#96F">    &#x3C;</span><span style="color:#F95">cc-tapis</span><span style="color:#F5B"> ✣</span><span style="color:#96F">=</span><span style="color:#FFF">"Rugs &#x26; ASCII"</span><span style="color:#96F">></span></span>
+<span class="line"><span style="color:#96F">      &#x3C;</span><span style="color:#F95">state</span><span style="color:#F5B"> ●</span><span style="color:#96F">=</span><span style="color:#FFF">"live"</span><span style="color:#96F">>&#x3C;/</span><span style="color:#F95">state</span><span style="color:#96F">></span></span>
+<span class="line"><span style="color:#96F">      &#x3C;</span><span style="color:#F95">project</span><span style="color:#F5B"> name</span><span style="color:#96F">=</span><span style="color:#FFF">"cc-tapis"</span><span style="color:#F5B"> year</span><span style="color:#96F">=</span><span style="color:#FFF">"2024"</span><span style="color:#96F">>&#x3C;/</span><span style="color:#F95">project</span><span style="color:#96F">></span></span>
+<span class="line"><span style="color:#96F">      &#x3C;</span><span style="color:#F95">a</span><span style="color:#F5B"> select+visit</span><span style="color:#96F">=</span><span style="color:#FFF">"→"</span><span style="color:#F5B"> href</span><span style="color:#96F">=</span><span style="color:#FFF">"https://cc-tapis.com"</span><span style="color:#96F">>&#x3C;/</span><span style="color:#F95">a</span><span style="color:#96F">></span></span>
+<span class="line"><span style="color:#96F">      &#x3C;</span><span style="color:#F95">stack</span><span style="color:#F5B"> backend</span><span style="color:#96F">=</span><span style="color:#FFF">"Craft CMS + Shopify"</span><span style="color:#F5B"> api</span><span style="color:#96F">=</span><span style="color:#FFF">"GraphQL"</span><span style="color:#F5B"> frontend</span><span style="color:#96F">=</span><span style="color:#FFF">"Nuxt 3"</span><span style="color:#96F">>&#x3C;/</span><span style="color:#F95">stack</span><span style="color:#96F">></span></span>
+<span class="line"><span style="color:#96F">    &#x3C;/</span><span style="color:#F95">cc-tapis</span><span style="color:#96F">></span></span>
+<span class="line"><span style="color:#96F">    </span></span>
+<span class="line"><span style="color:#96F">    &#x3C;</span><span style="color:#F95">no-ghost</span><span style="color:#F5B"> ✣</span><span style="color:#96F">=</span><span style="color:#FFF">"Custom restaurant management system"</span><span style="color:#96F">></span></span>
+<span class="line"><span style="color:#96F">      &#x3C;</span><span style="color:#F95">state</span><span style="color:#F5B"> ●</span><span style="color:#96F">=</span><span style="color:#FFF">"live"</span><span style="color:#96F">>&#x3C;/</span><span style="color:#F95">state</span><span style="color:#96F">></span></span>
+<span class="line"><span style="color:#96F">      &#x3C;</span><span style="color:#F95">project</span><span style="color:#F5B"> name</span><span style="color:#96F">=</span><span style="color:#FFF">"No Ghost"</span><span style="color:#F5B"> year</span><span style="color:#96F">=</span><span style="color:#FFF">"2025"</span><span style="color:#96F">>&#x3C;/</span><span style="color:#F95">project</span><span style="color:#96F">></span></span>
+<span class="line"><span style="color:#96F">      &#x3C;</span><span style="color:#F95">a</span><span style="color:#F5B"> select+visit</span><span style="color:#96F">=</span><span style="color:#FFF">"→"</span><span style="color:#F5B"> href</span><span style="color:#96F">=</span><span style="color:#FFF">"https://eatnoghost.com"</span><span style="color:#96F">>&#x3C;/</span><span style="color:#F95">a</span><span style="color:#96F">></span></span>
+<span class="line"><span style="color:#96F">      &#x3C;</span><span style="color:#F95">stack</span><span style="color:#F5B"> backend</span><span style="color:#96F">=</span><span style="color:#FFF">"Odoo + Payload CMS"</span><span style="color:#F5B"> api</span><span style="color:#96F">=</span><span style="color:#FFF">"JSON-RPC + Local API"</span><span style="color:#F5B"> frontend</span><span style="color:#96F">=</span><span style="color:#FFF">"Next.js 15"</span><span style="color:#96F">>&#x3C;/</span><span style="color:#F95">stack</span><span style="color:#96F">></span></span>
+<span class="line"><span style="color:#96F">    &#x3C;/</span><span style="color:#F95">no-ghost</span><span style="color:#96F">></span></span>
+<span class="line"><span style="color:#96F">    </span></span>
 <span class="line"><span style="color:#96F">    &#x3C;</span><span style="color:#F95">loewe-foundation-craft-prize-2024</span><span style="color:#F5B"> ✣</span><span style="color:#96F">=</span><span style="color:#FFF">"Infinite looping scroll of exquisite artworks"</span><span style="color:#96F">></span></span>
 <span class="line"><span style="color:#96F">      &#x3C;</span><span style="color:#F95">state</span><span style="color:#F5B"> ●</span><span style="color:#96F">=</span><span style="color:#FFF">"live"</span><span style="color:#96F">>&#x3C;/</span><span style="color:#F95">state</span><span style="color:#96F">></span></span>
 <span class="line"><span style="color:#96F">      &#x3C;</span><span style="color:#F95">project</span><span style="color:#F5B"> name</span><span style="color:#96F">=</span><span style="color:#FFF">"Loewe Foundation Craft Prize 2024"</span><span style="color:#F5B"> year</span><span style="color:#96F">=</span><span style="color:#FFF">"2024"</span><span style="color:#96F">>&#x3C;/</span><span style="color:#F95">project</span><span style="color:#96F">></span></span>
